# tera_design

./: .gitignore  Cargo.toml  README.md  build.sh  lockdown.json
examples/: README.md
examples/sbadmin2/: config.ron
examples/sbadmin2/templates/: blank.html  buttons.html  index.json  topbar.html  user.ctx  utilities-color.html  utilities-other.html
src/: config.rs  lock.rs  main.rs
templates/: 404.html  base.html  cards.html  charts.html  index.html  tables.html  utilities-animation.html  utilities-border.html
