[package]
name = "tera_design"
version = "0.1.6"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
tera = "0.11.20"
actix-web = "1.0.7"
log = "0.4.8"
serde = "1.0.100"
serde_json = "1.0.40"
actix-files = "0.1.4"
actix-identity = "0.1.0"
serde_derive = "1.0.100"
json-patch = "0.2.6"
ron = "0.5.1"
