[package]
name = "tera_design"
version = "0.3.0"
authors = ["Andras Mocsary <425404+mocsy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
tera = "0.11.20"
actix-web = "3.3.3"
log = "0.4.8"
serde = "1.0.100"
serde_json = "1.0.40"
actix-files = "0.3.0"
actix-identity = "0.3.1"
serde_derive = "1.0.100"
json-patch = "0.2.6"
ron = "0.5.1"
