[package]
name = "tera_design"
version = "0.3.1"
authors = ["Andras Mocsary <425404+mocsy@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/mocsy/tera_design"
license = "MIT OR Apache-2.0"
description = "tera based web design tool"
rust-version = "1.72"

[dependencies]
env_logger = "0.11.3"
tera = "0.11.20"
actix-web = "4.6.0"
log = "0.4.21"
serde = "1.0.202"
serde_json = "1.0.117"
actix-files = "0.6.5"
actix-identity = "0.7.1"
serde_derive = "1.0.202"
json-patch = "2.0.0"
ron = "0.8.1"
actix-session = { version = "0.9.0", default-features = false, features = ["cookie-session"] }
